// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature: containers/Auth/Code Background: Given storage has current auth data Given getCode request is expected Scenario: Mounting the component, getCode request fails When the component tree is mounted When getCode request fails with 500 Then the user should see the error screen 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      <span>
        Code
      </span>
    </h1>
    <p
      class="c2"
    >
      <span>
        Something went wrong. Try again later.
      </span>
    </p>
  </div>
</div>
`;

exports[`Feature: containers/Auth/Code Background: Given storage has current auth data Given getCode request is expected Scenario: Mounting the component, getCode request succeeds When the component tree is mounted Then the user should see the placeholder screen 1`] = `
<div>
  <div
    __name="Working"
  >
    <span>
      Getting the code
    </span>
  </div>
</div>
`;

exports[`Feature: containers/Auth/Code Background: Given storage has current auth data Given getCode request is expected Scenario: Mounting the component, getCode request succeeds When the component tree is mounted When getCode request succeeds Then the user should see the code screen with the copy button 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

.c2 {
  overflow-wrap: break-word;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      <span>
        Code
      </span>
    </h1>
    <div
      class="c2"
    >
      the code
    </div>
    <div
      class="c3"
    >
      <div
        __name="RaisedButton"
      >
        <div
          __prop="label"
        >
          <span>
            Copy to clipboard
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
